# Thesis_JohannaW

Experiment results and Raw Data/Elevator/: Elevator_Barometer_Result_Summary.xlsx
Experiment results and Raw Data/Elevator/Floordetection/: loaded_calibration_test_20260620_201603.csv  loaded_calibration_test_20260620_203723.csv  loaded_calibration_test_20260620_204620.csv  loaded_calibration_test_20260622_130125.csv  loaded_calibration_test_20260622_130849.csv  loaded_calibration_tests_combined.xlsx
Experiment results and Raw Data/Trolley/: Tests_Trolley_with_Summary.xlsx
Experiment results and Raw Data/Trolley/Trolley_Type_detection/: evaluate_trolley_example_images.py
Source code/: README.md  simulation_architecture_overview
Source code/Arduino/: README.md
Source code/Assets/: README.md
Source code/Datasets/: README.md
Source code/ROS2/: README.md
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/: CMakeLists.txt  package.xml
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/config/: controllers.yaml  fastdds_no_shm.xml  gz_bridge.yaml  mapper_params_online_async.yaml  mecanum_kinematics.py  nav2_full_params.yaml  nav2_params.yaml
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/description/: IMU.xacro  camera.xacro  color_include.xacro  gazebo.xacro  gazebo_control.xacro  lidar.xacro  mecanum_bot.urdf.xacro  robot_core.xacro  ros2_control.xacro
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/launch/: mission_baseline_batch_test.launch.py  sim.launch.py
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/launch/old launch codes/: aruco_docking_test.launch.py  aruco_limit_test.launch.py  joint_state_gui.launch.py  mission_batch_test.launch.py  mission_parameter_sweep.launch.py  sim_control_vm.launch.py  sim_like_tutorial.launch.py  spawn_aruco_panels.launch.py  view_urdf.launch.py
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/models/ChargingZone/: model.config  model.sdf
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/models/DropZone/: model.config  model.sdf
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/models/OrangeDropZone/: model.config  model.sdf
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/models/Trolley/: model.config  model.sdf
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/models/Trolley/materials/scripts/: aruco.material
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/models/Trolley/meshes/: Trolley.dae  TrolleyWheel.dae
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/models/TrolleyImage/: model.config  model.sdf
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/models/TrolleyImage/materials/scripts/: Trolley.material
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/my_robot_description/: imu_fixer.py
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/scripts/: aruco_docking_test_runner.py  aruco_holonomic_align_controller.py  aruco_limit_tester.py  aruco_panel_position_monitor.py  aruco_vs_ground_truth_monitor.py  holonomic_goal_controller.py  mission_batch_tester.py  mission_parameter_sweep.py  nav2_trolley_mission_controller.py  trolley_ready_docking_controller.py
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/src/: trolley_attach_plugin.cpp
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/my_robot_description/worlds/: ArendalUETG  ArendalUETG.world  TestRoom.world  aruco_test.world  empty.world  nav_test_room.world  robot.config
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/object_detection/: CMakeLists.txt  package.xml
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/object_detection/launch/: launch_yolov8.launch.py
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/object_detection/runs/trolley_rot180_by_detection_20260607_153533/: detection_summary.csv
Source code/ROS2/Nursing-Home-Robot/Nursing-Home-Robot/src/object_detection/scripts/: trolley_image_detector.py  yolov8_ros2_pt.py
Source code/ROS2/humble_dev_ws/gr4_ws/src/gr4_trolley_vision/: package.xml  setup.cfg  setup.py
Source code/ROS2/humble_dev_ws/gr4_ws/src/gr4_trolley_vision/config/: trolley_vision.yaml
Source code/ROS2/humble_dev_ws/gr4_ws/src/gr4_trolley_vision/gr4_trolley_vision/: aruco_detection_monitor.py  opencv_camera_node.py
Source code/ROS2/humble_dev_ws/gr4_ws/src/gr4_trolley_vision/launch/: trolley_aruco.launch.py
Source code/ROS2/humble_robot_final_ws/src/object_detection/: CMakeLists.txt
Source code/ROS2/humble_robot_final_ws/src/object_detection/launch/: launch_yolov8.launch.py
Source code/ROS2/notes/: read  (+4 more)
Source code/Results_And_Logs/: README.md
(+405 files in other folders)
